# deepseek_ocr

./: .env.example  README.md  main.py  notify.py  pdf.py  pyproject.toml
